openwebui-kth-cluster-helm/backups/NetworkPolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pg-backup-restore
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: open-webui
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - port: 5432
